# larql

./: .gitignore  Cargo.toml  README.md  hello.py  orchestrator.py
crates/larql-cli/: Cargo.toml
crates/larql-cli/src/commands/extraction/compile_cmd/: edge.rs  mod.rs  (+2 more)
crates/larql-compute/: PERFORMANCE.md
crates/larql-compute/csrc/: q4_dot.c
crates/larql-compute/examples/: bench_pipeline.rs  test_shader_compile.rs
crates/larql-compute/src/: lib.rs
crates/larql-compute/src/memit/: mod.rs  solver.rs
crates/larql-compute/src/metal/: mod.rs
crates/larql-compute/src/metal/ops/: full_pipeline.rs
crates/larql-compute/src/metal/shaders/: mod.rs
crates/larql-compute/tests/: test_metal_shaders.rs
crates/larql-lql/examples/: lql_demo.rs  parser_demo.rs
crates/larql-lql/src/: ast.rs  lexer.rs  relations.rs
crates/larql-lql/src/executor/: compact.rs  introspection.rs  lifecycle.rs  mod.rs  mutation.rs  query.rs
crates/larql-lql/src/parser/: introspection.rs  lifecycle.rs  mod.rs  tests.rs
crates/larql-models/src/loading/: gguf.rs
crates/larql-python/examples/: infer.py
crates/larql-python/python/larql/: __init__.py  walk_ffn.py
crates/larql-python/src/: lib.rs  vindex.rs  walk.rs
crates/larql-residual-abi/: Cargo.toml
crates/larql-residual-abi/src/: edge.rs  lib.rs  norm.rs  persistence.rs
crates/larql-vindex/examples/: vindex_demo.rs
crates/larql-vindex/src/: config.rs  lib.rs  mutate.rs
crates/larql-vindex/src/storage/: memit_store.rs  mod.rs
crates/larql-vindex/tests/: test_vindex.rs
docs/: lql-guide.md
knowledge/: README.md
