[package]
name = "larql-residual-abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Residual-stream ABI for LARQL: install_edge primitive, persistence profiles, tag conventions"
keywords = ["transformer", "ffn", "compiled-edge", "larql"]
categories = ["data-structures"]

[dependencies]
ndarray = "0.16"
thiserror = { workspace = true }
